# agv_robot

./: README.md  debug_note.md  fuzzy_paper.md  kill_sim.sh  main.c  run_rviz.sh  run_sim.sh
agv_bringup/: CMakeLists.txt  package.xml
agv_bringup/launch/: localization_realtime.launch.py  mapping_realtime.launch.py
agv_controller/: CMakeLists.txt  package.xml
agv_controller/include/agv_controller/: KeyboardInput.h
agv_controller/launch/: agv_controller.launch.py
agv_controller/src/: KeyboardInput.cpp  main.cpp
agv_fuzzy_trajectory/: CMakeLists.txt  README.md  package.xml  setup.py
agv_fuzzy_trajectory/agv_fuzzy_trajectory/: circle_trajectory_publisher.py  fuzzy_trajectory_controller.py  test_trajectory_publisher.py
agv_fuzzy_trajectory/include/agv_fuzzy_trajectory/: fuzzy.h
agv_fuzzy_trajectory/launch/: circle_trajectory.launch.py  fuzzy_circle_tracking.launch.py  fuzzy_trajectory.launch.py
agv_fuzzy_trajectory/src/: fuzzy.cpp
agv_localization/: ARUCO_MAP_LOCALIZATION.md  CMakeLists.txt  SENSOR_FUSION_GUIDE.md  SENSOR_FUSION_STRATEGY.md  package.xml
agv_localization/agv_localization/: fusion_monitor.py  imu_republisher.py  odom_republisher.py
agv_localization/config/: amcl.yaml  amcl_warehouse.yaml  aruco_map_positions.yaml  ekf.yaml  ekf_global.yaml  ekf_local.yaml  ekf_map_fusion.yaml  ekf_map_fusion.yaml.backup
agv_localization/include/agv_localization/: kalman_filter.hpp
agv_localization/launch/: global_localization.launch.py  local_localization.launch.py  localization_fusion.launch.py  real_time_localization.launch.py
agv_localization/src/: aruco_detector_sim.cpp  aruco_map_localizer.cpp  imu_republisher.cpp  kalman_filter.cpp  odom_republisher.cpp  odometry_motion_model.cpp
agv_mapping_with_knowns_poses/: CMakeLists.txt  package.xml
agv_mapping_with_knowns_poses/agv_mapping_with_knowns_poses/: mapping_with_known_poses.py
agv_mapping_with_knowns_poses/config/: slam_toolbox.yaml
agv_mapping_with_knowns_poses/include/agv_mapping_with_knowns_poses/: mapping_with_knowns_poses.h
agv_mapping_with_knowns_poses/launch/: real_time_mapping.launch.py  slam.launch.py
agv_mapping_with_knowns_poses/maps/lab208b3/: lab208b3.pgm  lab208b3.yaml
agv_mapping_with_knowns_poses/maps/room_20x20/: map.pgm  map.yaml  room_20x20.pgm
agv_mapping_with_knowns_poses/src/: mapping_aruco.cpp  mapping_with_knowns_poses.cpp
agv_planner/: generate_random_map.py  package.xml  setup.cfg  setup.py
agv_planner/agv_planner/: global_planner.py  local_planner.py
agv_planner/launch/: path_controller.launch.py  planner_test.launch.py
agv_planner/maps/: my_map.pgm
agv_planner/rviz/: planner_config.rviz
agv_stm32/.metadata/: .log4j2.xml  version.ini
agv_stm32/.metadata/.plugins/org.eclipse.core.resources/.projects/agv_PID/: .location  .markers
agv_stm32/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
agv_stm32/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
agv_stm32/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
agv_stm32/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
agv_stm32/agv_PID/: .project  agv_PID.ioc
agv_stm32/agv_PID/.metadata/: .log4j2.xml  version.ini
agv_stm32/agv_PID/.metadata/.plugins/org.eclipse.cdt.core/: ROS_ROS.language.settings.xml  agv_stm32.language.settings.xml
agv_stm32/agv_PID/.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree  7.tree
agv_stm32/agv_PID/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
agv_stm32/agv_PID/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
agv_stm32/agv_PID/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
agv_stm32/agv_PID/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
agv_stm32/agv_PID/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
agv_stm32/agv_PID/agv_pid/: .project  agv_pid.ioc
agv_trajectory_tracking/: FUZZY_CONTROLLER_IMPLEMENTATION.md  README.md  SUMMARY.md  TRAJECTORY_PUBLISHER_GUIDE.md  package.xml  setup.cfg  setup.py
agv_trajectory_tracking/agv_trajectory_tracking/: fuzzy_path_tracking.py  fuzzy_trajectory_controller.py  fuzzy_trajectory_controller.py.corrupted  realtime_visualizer.py  trajectory_plotter.py  trajectory_publisher.py
agv_trajectory_tracking/launch/: real_time_trajectory_tracking.launch.py  trajectory_tracking.launch.py
agv_zed2/: CMakeLists.txt  README_STEREO_60FPS.md  package.xml
agv_zed2/config/: zed2_calibration_hd.yaml  zed2_calibration_vga.yaml
agv_zed2/scripts/: aruco_detector.py  aruco_localizer.py  aruco_mapper.py
agv_zed2/src/: aruco_detector.cpp  aruco_localizer.cpp  aruco_mapper.cpp  camera_zed2.cpp  mapping.cpp
mobile_robot/: CMakeLists.txt  package.xml
mobile_robot/config/: my_controller.yaml  robot_controller.yaml
mobile_robot/include/mobile_robot/: simple_controller.hpp
mobile_robot/launch/: launch_sim.launch.py  model_real_time.launch.py
mobile_robot/log/: latest_list
mobile_robot/models/aruco_0/: model.config  model.sdf
mobile_robot/models/aruco_1/: model.config  model.sdf
mobile_robot/models/aruco_2/: model.config  model.sdf
mobile_robot/models/aruco_3/: model.config  model.sdf
mobile_robot/models/aruco_4/: model.config  model.sdf
mobile_robot/models/aruco_5/: model.config  model.sdf
mobile_robot/rviz/: rviz2.rviz
mobile_robot/scripts/: scan_throttle.py
mobile_robot/src/: aruco_detector_sim.cpp  motor_odom.cpp  scan_repub.py  scan_throttle.py  simple_controller.cpp  stm32_odom.cpp  twist_relay.cpp
mobile_robot/urdf/: gazebo.xacro  gazebo_control.xacro  mobile_robot.urdf.xacro  new_robot_2.xacro  new_robot_3.xacro  robot_real_time.urdf.xacro  ros2_control.xacro  ros2_control_real.xacro
mobile_robot/worlds/: room_20x20.world  simple_world.sdf  small_house.world
mobile_robot/xacro/: gazebo_control.xacro  robot.urdf.xacro  robot.xacro  ros2_control.xacro
rplidar_ros/launch/: rplidar_a2m8_launch.py
rplidar_ros/src/: rplidar_client.cpp
simulate_fuzzy_pic/: function.docx
(+14 files in other folders)
