<?xml version="1.0"?>
<package format="3">
  <name>agv_fuzzy_trajectory</name>
  <version>0.0.0</version>
  <description>Fuzzy logic trajectory tracking controller for AGV</description>
  <maintainer email="thuong.trandinh@hcmut.edu.vn">thuong</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
